<resources>
    <string name="app_name">Nyam App</string>
    <string name="nyam_mobile">Nyam Mobile</string>
    <string name="intro_desc">Calculate Your Diet</string>
    <string name="login">Login</string>
    <string name="or">OR</string>
    <string name="register">Register</string>
    <string name="hint_email">Input your email</string>
    <string name="hint_password">Input your password</string>
    <string name="hint_confirm_password">Confirm your password</string>
    <string name="scan_camera">Scan Food</string>
    <string name="scan_text">Scan History</string>
    <string name="setting_text">Setting</string>
    <string name="scan_history">Scan History</string>
    <string name="chatbot_text">Chatbot</string>
    <string name="home_desc">home</string>
    <string name="empty_history_error">No history yet</string>
    <string name="example">Example</string>
    <string name="take_picture">Take Picture</string>
    <string name="upload">Upload</string>
    <string name="image_preview">Image Preview</string>
    <string name="today_callorie">Today\'s Callorie: </string>
    <string name="current">current</string>
    <string name="max_callorie">max callorie</string>
    <string name="food_name">Food Name</string>
    <string name="kalori">Kalori</string>
    <string name="lemak">Lemak</string>
    <string name="_100">100</string>
    <string name="carbo">Karbohidrat</string>
    <string name="protein">Protein</string>
    <string name="iron">Zat Besi</string>
    <string name="calsium">Kalsium</string>
    <string name="date_title">Tanggal Scan:</string>
    <string name="berhasil_dihapus">Berhasil Dihapus</string>
    <string name="konfirmasi_hapus">Hapus hasil ini?</string>
    <string name="tidak">Tidak</string>
    <string name="iya">Iya</string>
    <string name="scan_food">Scan Food</string>
</resources>