<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.MainActivity">

    <TextView
        android:id="@+id/tv_intro_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nyam_mobile"
        android:fontFamily="@font/jockey_one_font"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="40sp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_intro_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intro_desc"
        android:fontFamily="@font/jockey_one_font"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/tv_intro_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/iv_intro"
        android:layout_width="400dp"
        android:layout_height="380dp"
        android:src="@drawable/intro"
        app:layout_constraintTop_toBottomOf="@id/tv_intro_desc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        app:cornerRadius="10dp"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/login"
        android:backgroundTint="@color/yellow"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/iv_intro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:id="@+id/divider_left"
        android:layout_width="150dp"
        android:layout_height="3dp"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_or"
        app:layout_constraintTop_toBottomOf="@id/btn_login" />

    <TextView
        android:id="@+id/tv_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/white" />

    <View
        android:id="@+id/divider_right"
        android:layout_width="150dp"
        android:layout_height="3dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:background="@color/white"
        app:layout_constraintStart_toEndOf="@id/tv_or"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_login" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_register"
        app:cornerRadius="10dp"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/register"
        android:backgroundTint="@color/black"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_or"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>