<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    tools:context=".ui.home.HomeActivity">

    <ImageView
        android:id="@+id/iv_home"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:contentDescription="@string/home_desc"
        android:src="@drawable/home"
        android:layout_marginTop="-30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_scan"
        android:layout_width="170dp"
        android:layout_height="170dp"
        app:cardCornerRadius="10dp"
        style="@style/Widget.Material3.CardView.Elevated"
        app:cardElevation="20dp"
        android:layout_marginTop="-30dp"
        android:backgroundTint="@color/yellow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/card_chat"
        app:layout_constraintTop_toBottomOf="@id/iv_home" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical">

        <ImageView
            android:id="@+id/iv_camera"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/camera"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:id="@+id/camera_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scan_camera"
            android:textColor="@color/background"
            android:fontFamily="@font/jockey_one_font"
            android:textSize="20sp"
            android:textAlignment="center"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_chat"
        android:layout_width="170dp"
        android:layout_height="170dp"
        app:cardCornerRadius="10dp"
        android:layout_marginTop="-30dp"

        android:backgroundTint="@color/purple"
        app:layout_constraintStart_toEndOf="@id/card_scan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_home" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/iv_chat"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/chat"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:id="@+id/chat_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/chatbot_text"
                android:fontFamily="@font/jockey_one_font"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:textAlignment="center"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_history"
        android:layout_width="170dp"
        android:layout_height="170dp"
        app:cardCornerRadius="10dp"
        android:layout_marginTop="16dp"

        android:backgroundTint="@color/cream"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/card_setting"
        app:layout_constraintTop_toBottomOf="@id/card_scan" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/iv_history"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/history"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:id="@+id/history_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/scan_history"
                android:fontFamily="@font/jockey_one_font"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:textAlignment="center"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_setting"
        android:layout_width="170dp"
        android:layout_height="170dp"
        app:cardCornerRadius="10dp"
        android:layout_marginTop="16dp"

        android:backgroundTint="@color/purple"
        app:layout_constraintStart_toEndOf="@id/card_history"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_scan" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/iv_setting"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/setting"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:id="@+id/setting_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_text"
                android:fontFamily="@font/jockey_one_font"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:textAlignment="center"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_recent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintTop_toBottomOf="@id/card_history"
        android:backgroundTint="@color/yellow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >

        <LinearLayout
            android:id="@+id/linear_recent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_today_callorie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="@color/background"
                android:fontFamily="@font/jockey_one_font"
                android:text="@string/today_callorie" />

            <TextView
                android:id="@+id/tv_current_callorie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jockey_one_font"
                android:textSize="24sp"
                android:textColor="@color/background"
                android:textAlignment="center"
                android:text="@string/current" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:orientation="horizontal"
                android:thickness="4dp"
                app:dividerColor="@color/cream" />

            <TextView
                android:id="@+id/tv_max_callorie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jockey_one_font"
                android:textSize="24sp"
                android:textColor="@color/background"
                android:textAlignment="center"
                android:text="@string/max_callorie" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>