<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginHorizontal="8dp"
    android:layout_marginVertical="4dp"
    android:backgroundTint="@color/yellow"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground"
    app:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp">

        <ImageView
            android:id="@+id/iv_food"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/intro"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:id="@+id/tv_history_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/example"
            android:textColor="@color/background"
            android:fontFamily="@font/jockey_one_font"
            android:textSize="24sp"
            app:layout_constraintStart_toEndOf="@id/iv_food"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider"
            android:layout_width="wrap_content"
            android:layout_height="3dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/tv_history_title"
            app:layout_constraintStart_toEndOf="@id/iv_food" />

        <TextView
            android:id="@+id/tv_kalori"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/_100"
            android:textColor="@color/background"
            android:fontFamily="@font/jockey_one_font"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@id/divider"
            app:layout_constraintStart_toEndOf="@id/iv_food" />

        <TextView
            android:id="@+id/tv_calorie_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/kalori"
            android:textColor="@color/background"
            android:fontFamily="@font/jockey_one_font"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@id/divider"
            app:layout_constraintStart_toEndOf="@id/tv_kalori" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>